--- a/CasieBounce/src/config.yml
+++ b/CasieBounce/src/config.yml
@@ -1,15 +1,24 @@
-#  _____           _     ______                            
-# /  __ \         (_)    | ___ \                           
-# | /  \/ __ _ ___ _  ___| |_/ / ___  _   _ _ __   ___ ___ 
-# | |    / _` / __| |/ _ \ ___ \/ _ \| | | | '_ \ / __/ _ \
-# | \__/\ (_| \__ \ |  __/ |_/ / (_) | |_| | | | | (_|  __/
-#  \____/\__,_|___/_|\___\____/ \___/ \__,_|_| |_|\___\___|
-#  
-# -----------------------------------------------------------------------------------------
-# How high you will bounce, just experiment with it :)
-Bounceforce: 0.7
+#   /$$$$$$                      /$$           /$$$$$$$                                                   
+#  /$$__  $$                    |__/          | $$__  $$                                                  
+# | $$  \__/  /$$$$$$   /$$$$$$$ /$$  /$$$$$$ | $$  \ $$  /$$$$$$  /$$   /$$ /$$$$$$$   /$$$$$$$  /$$$$$$ 
+# | $$       |____  $$ /$$_____/| $$ /$$__  $$| $$$$$$$  /$$__  $$| $$  | $$| $$__  $$ /$$_____/ /$$__  $$
+# | $$        /$$$$$$$|  $$$$$$ | $$| $$$$$$$$| $$__  $$| $$  \ $$| $$  | $$| $$  \ $$| $$      | $$$$$$$$
+# | $$    $$ /$$__  $$ \____  $$| $$| $$_____/| $$  \ $$| $$  | $$| $$  | $$| $$  | $$| $$      | $$_____/
+# |  $$$$$$/|  $$$$$$$ /$$$$$$$/| $$|  $$$$$$$| $$$$$$$/|  $$$$$$/|  $$$$$$/| $$  | $$|  $$$$$$$|  $$$$$$$
+#  \______/  \_______/|_______/ |__/ \_______/|_______/  \______/  \______/ |__/  |__/ \_______/ \_______/
+# 
+# --------------------------------------------------------------------------------------------------------
+# If the WorldGuard Flags are enabled or not. Once enabled you have to fully restart your server so the flags
+# can be registered in WorldGuard. NOTE: the flag registration can not be undone! You will always see the flags
+# in the flag list, even when CasieBounce is not enabled. (1.13+ Only)
+WorldGuardFlags: false
+# --------------------------------------------------------------------------------------------------------
 
-#The sound that will be played when you bounce. (Set to NONE to disable)
+# ------------------------------------------- DEFAULT SETTINGS -------------------------------------------
+# How high you will bounce, just experiment with it :)
+BounceForce: 0.7
+
+# The sound that will be played when you bounce. (Set to NONE to disable)
 BounceSound: BLOCK_SLIME_HIT
 
 # Whether you will stop bouncing when you crouch.
@@ -23,12 +32,6 @@ DeathMessage: '%player% fell while bouncing'
 # Whether you need the permission CB.bounce.
 RequirePermission: false
 
-# The names of the WorldGuard regions. (Only works when WorldGuard is installed {Use GLOBAL to make it work everywhere, make sure when you use GLOBAL to not specify other regions})
-Regions:
-   - GLOBAL
-# If the regionlist above is a blacklist. When true you can bounce in every region exept the ones above. (GLOBAL will disable the bouncing)
-IsRegionBlacklist: false
-
 # The blocks where you can bounce on.  (Legacy use: WOOL:1 || 1.13+ use: ORANGE_WOOL)
 BounceBlocks:
    - WOOL:1
@@ -36,8 +39,7 @@ BounceBlocks:
 
    - ORANGE_WOOL
    - BLUE_CONCRETE
-# If the blocklist above is a blacklist. When true you can bounce on every block exept the ones above.
+# If the blocklist above is a blacklist. When true you can bounce on every block except the ones above.
 IsBlockBlacklist: false
-
-# -----------------------------------------------------------------------------------------
+# --------------------------------------------------------------------------------------------------------
 # By: CasieBarie || Source Code: https://github.com/CasieBarieDev/CasieBounce || Support: https://discord.gg/ZptCBHeHyg
